--- a/css/styles.css
+++ b/css/styles.css
@@ -3,11 +3,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 
-
+/* ALL*/
 *{
     margin: 0;
 }
 
+/* Modification sur toute la page*/
 .home{
     height: 100%;    
     display: flex;
@@ -15,6 +16,8 @@
     height: 100vh;
 }
 
+
+/*  Manipulation sur la barre de naviguation */
 .navbar{
     /*border: 3px solid;*/
     margin-top: 15px;
@@ -25,6 +28,8 @@
     padding: 0 50px;
 }
 
+
+        /* Mon prenom hehe! Bon, le brand name quoi*/
 .navbar .brand_name{
     width: 30%;
     display: flex;
@@ -34,6 +39,8 @@
     font-size: 32px;
 }
 
+
+        /* Toutes les modifications sur les Liens de la barre de naviguation*/
 .nav_controls_links{
     width: 35%;
     display: flex;
@@ -46,12 +53,34 @@
     font-weight: 400;
 }
 
-.nav_controls_links a:hover{
+.nav_controls_links a{
+    text-decoration: none;
+    position: relative;
+    padding: 0 10px;
     transition: 0.6s;
-    transform: scale(1.1);
-    text-decoration: underline;
 }
 
+.nav_controls_links a::after{
+    content: "";
+    position: absolute;
+    background-color: #000;
+    height: 2px;
+    width: 0;
+    left: 0;
+    bottom: -4px;
+    transition: 0.6s;
+}
+
+
+.nav_controls_links a:hover::after{
+    width: 100%;
+}
+
+.nav_controls_links a:hover{
+    transform: scale(1.1);
+}
+
+/* Mes réseaux sociaux*/
 .social_network{
     display: flex;
     font-size: 50px;
@@ -71,6 +100,7 @@
     transform: scale(1.1);
 }
 
+/* Contenue de la page Web*/
 .content{
     width: 100%;
     height: 100%;
