--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 /* Importation des polices*/
 @import url('https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 /* ALL*/
 *{
@@ -10,10 +10,14 @@
 
 /* Modification sur toute la page*/
 .home{
-    height: 100%;    
+    width: auto;
     display: flex;
     flex-direction: column;
     height: 100vh;
+    background-image: url(../img/IMG20230629111525.jpg);
+    background-size: cover;
+    transition: 0.6s;
+    position: relative;
 }
 
 
@@ -36,13 +40,12 @@
     justify-content: center;
     font-family: "Kalam", cursive;
     font-weight: 900;
-    font-size: 32px;
-    
+    font-size: 40px;
 }
 
 .myname{
     text-decoration: none;
-    color: #000;
+    color: #FFF;
 }
 
 
@@ -56,20 +59,21 @@
     font-size: 20px;
     text-transform: uppercase;
     font-family: "Montserrat", sans-serif;
-    font-weight: 400;
+    font-weight: 500;
 }
 
 .nav_controls_links a{
     text-decoration: none;
     position: relative;
     padding: 0 10px;
+    color: #FFF;
     transition: 0.6s;
 }
 
 .nav_controls_links a::after{
     content: "";
     position: absolute;
-    background-color: #000;
+    background-color: #ffffff;
     height: 2px;
     width: 0;
     left: 0;
@@ -96,7 +100,7 @@
 
 .social_network i.bxl-instagram-alt {
     color: transparent;
-    background-image: url(../instagram-hex-colors-gradient-background.png);
+    background-image: url(../img/instagram-hex-colors-gradient-background.png);
     object-fit: cover;
     background-clip: text;
 }
@@ -115,8 +119,19 @@
     align-items: center;
     text-align: center;
     font-size: 24px;
+    font-family: "Roboto", sans-serif;
+    color: #ffffff8c;
 }
 
 .main_content{
     width: 40%;
+    position: relative;
+}
+
+a#learn_more{
+    text-decoration: none;
+}
+
+.flou{
+    filter: blur(5px);
 }
