--- a/css/styles.css
+++ b/css/styles.css
@@ -70,6 +70,11 @@
     transition: 0.6s;
 }
 
+.nav_controls_links a:active{
+    font-weight: 700;
+    color: #00FF00;
+}
+
 .nav_controls_links a::after{
     content: "";
     position: absolute;
