--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,8 @@
     display: flex;
     flex-direction: column;
     height: 100vh;
-    background-image: url(../img/IMG20230629111525.jpg);
+    background-color: #000;
+    /*background-image: url(../img/IMG20230629111525.jpg); */
     background-size: cover;
     transition: 0.6s;
     position: relative;
